<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sliding_menu_background">
  	
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:layout_margin="15dip">
    	
    	<!-- Profile Information -->
        <TextView 
		    android:id="@+id/sli_menu_profile_title"
	        android:text="@string/sliding_menu_profile_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/sliding_menu_title"
	        android:textSize="@dimen/slidingmenu_title_text_size"
	        android:paddingLeft="5dip"
	        />
	    <View
	    	android:layout_width="fill_parent"
	    	android:layout_height="1dp"
	    	android:background="@color/sliding_menu_separator"
	    	android:layout_marginTop="2dip"
	    	android:layout_marginBottom="2dip"
	    	/> 
	    <LinearLayout 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:paddingTop="10dip"
	        android:paddingLeft="10dip">
	        <ImageView
			  	android:layout_width="35dip"
			  	android:layout_height="35dip"
			  	android:src="@drawable/icon"
			  	android:layout_gravity="center"
			  	android:contentDescription="@string/tutorial_1"/>
	        <TextView 
			    android:id="@+id/sli_menu_profile_username"
		        android:text="VoodooXTC"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_vertical"
		        android:textColor="@drawable/sliding_menu_text_color_selector"
		        android:textSize="@dimen/slidingmenu_content_text_size"
		        android:paddingLeft="10dip"
		        />
	    </LinearLayout>
	    <TextView 
		    android:id="@+id/sli_menu_profile_loginAndOut"
	        android:text="Logout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textColor="@drawable/sliding_menu_text_color_selector"
	        android:textSize="@dimen/slidingmenu_content_text_size"
	        android:padding="10dip"
	        />
	    <TextView 
		    android:id="@+id/sli_menu_profile_go_pro"
	        android:text="Go PRO!"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textColor="@color/blue"
	        android:textSize="@dimen/slidingmenu_content_text_size"
	        android:padding="10dip"
	        />
	    
	    <!-- Activities -->
        <TextView 
		    android:id="@+id/sli_menu_your_shows_title"
	        android:text="@string/sliding_menu_your_shows_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/sliding_menu_title"
	        android:textSize="@dimen/slidingmenu_title_text_size"
	        android:paddingLeft="5dip"
	        />
	    <View
	    	android:layout_width="fill_parent"
	    	android:layout_height="1dp"
	    	android:background="@color/sliding_menu_separator"
	    	android:layout_marginTop="2dip"
	    	android:layout_marginBottom="2dip"
	    	/>
	    <TextView 
		    android:id="@+id/sli_menu_profile_main"
	        android:text="@string/sliding_menu_main"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textColor="@drawable/sliding_menu_text_color_selector"
	        android:textSize="@dimen/slidingmenu_content_text_size"
	        android:padding="10dip"
	        />
	    <TextView 
		    android:id="@+id/sli_menu_profile_favorites"
	        android:text="@string/sliding_menu_favorite"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textColor="@drawable/sliding_menu_text_color_selector"
	        android:textSize="@dimen/slidingmenu_content_text_size"
	        android:padding="10dip"
	        />
	    <TextView 
		    android:id="@+id/sli_menu_profile_timeline"
	        android:text="@string/sliding_menu_timeline"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textColor="@drawable/sliding_menu_text_color_selector"
	        android:textSize="@dimen/slidingmenu_content_text_size"
	        android:padding="10dip"
	        />
	    <TextView 
		    android:id="@+id/sli_menu_profile_queue"
	        android:text="@string/sliding_menu_queue"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textColor="@drawable/sliding_menu_text_color_selector"
	        android:textSize="@dimen/slidingmenu_content_text_size"
	        android:padding="10dip"
	        />
	    
	    <!-- Settings -->
	    <TextView 
		    android:id="@+id/sli_menu_settings_title"
	        android:text="@string/sliding_menu_settings_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/sliding_menu_title"
	        android:textSize="@dimen/slidingmenu_title_text_size"
	        android:paddingLeft="5dip"
	        />
	    <View
	    	android:layout_width="fill_parent"
	    	android:layout_height="1dp"
	    	android:background="@color/sliding_menu_separator"
	    	android:layout_marginTop="2dip"
	    	android:layout_marginBottom="2dip"
	    	/>
	    <TextView 
		    android:id="@+id/sli_menu_sync"
	        android:text="@string/sliding_menu_sync"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textColor="@drawable/sliding_menu_text_color_selector"
	        android:textSize="@dimen/slidingmenu_content_text_size"
	        android:padding="10dip"
	        />
	    <TextView 
		    android:id="@+id/sli_menu_settings"
	        android:text="@string/sliding_menu_settings"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textColor="@drawable/sliding_menu_text_color_selector"
	        android:textSize="@dimen/slidingmenu_content_text_size"
	        android:padding="10dip"
	        />
	    <TextView 
		    android:id="@+id/sli_menu_contact"
	        android:text="@string/sliding_menu_contact"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textColor="@drawable/sliding_menu_text_color_selector"
	        android:textSize="@dimen/slidingmenu_content_text_size"
	        android:padding="10dip"
	        />
	    <TextView 
		    android:id="@+id/sli_menu_about"
	        android:text="@string/sliding_menu_about"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:textColor="@drawable/sliding_menu_text_color_selector"
	        android:textSize="@dimen/slidingmenu_content_text_size"
	        android:padding="10dip"
	        />
    </LinearLayout>
</ScrollView>