<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:oak="http://oak/oak/schema"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- Profile Information -->
    <oak.widget.TextViewWithFont
        android:id="@+id/sli_menu_profile_title"
        android:text="@string/sliding_menu_profile_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/sliding_menu_title"
        android:textSize="@dimen/slidingmenu_title_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        oak:font="Roboto-Light.ttf"
        />
    <View
        style="@style/sideMenuSeparator"
        />

    <RelativeLayout
        style="@style/FillWidth"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        >
        <ImageView
            android:id="@+id/sli_menu_avatar_img"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/icon"
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"/>
        <oak.widget.TextViewWithFont
            android:id="@+id/sli_menu_profile_username"
            android:text="@string/app_name"
            style="@style/FillWidth"
            android:textColor="@drawable/sliding_menu_text_color_selector"
            android:textSize="@dimen/slidingmenu_content_text_size"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@id/sli_menu_avatar_img"
            android:layout_marginLeft="8dp"
            oak:font="Roboto-Light.ttf"
            />
    </RelativeLayout>
    <oak.widget.TextViewWithFont
        android:id="@+id/sli_menu_profile_loginAndOut"
        android:text="Logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/sliding_menu_text_color_selector"
        android:textSize="@dimen/slidingmenu_content_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        oak:font="Roboto-Light.ttf"
        />
    <oak.widget.TextViewWithFont
        android:id="@+id/sli_menu_profile_go_pro"
        android:text="Go PRO!"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/sliding_menu_text_color_selector"
        android:textSize="@dimen/slidingmenu_content_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        oak:font="Roboto-Light.ttf"
        />

    <!-- Activities -->
    <oak.widget.TextViewWithFont
        android:id="@+id/sli_menu_your_shows_title"
        android:text="@string/sliding_menu_your_shows_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/sliding_menu_title"
        android:textSize="@dimen/slidingmenu_title_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        oak:font="Roboto-Light.ttf"
        />

    <View
        style="@style/sideMenuSeparator"
        />
    <oak.widget.TextViewWithFont
        android:id="@id/dashboard_fragment"
        android:text="@string/sliding_menu_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/sliding_menu_text_color_selector"
        android:textSize="@dimen/slidingmenu_content_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        oak:font="Roboto-Light.ttf"
        />
    <oak.widget.TextViewWithFont
        android:id="@id/favorites_fragment"
        android:text="@string/sliding_menu_favorite"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/sliding_menu_text_color_selector"
        android:textSize="@dimen/slidingmenu_content_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        oak:font="Roboto-Light.ttf"
        />
    <oak.widget.TextViewWithFont
        android:id="@id/timeline_fragment"
        android:text="@string/sliding_menu_timeline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/sliding_menu_text_color_selector"
        android:textSize="@dimen/slidingmenu_content_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        oak:font="Roboto-Light.ttf"
        />
    <oak.widget.TextViewWithFont
        android:id="@id/queue_fragment"
        android:text="@string/sliding_menu_queue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/sliding_menu_text_color_selector"
        android:textSize="@dimen/slidingmenu_content_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        oak:font="Roboto-Light.ttf"
        />

    <!-- Settings -->
    <oak.widget.TextViewWithFont
        android:id="@+id/sli_menu_settings_title"
        android:text="@string/sliding_menu_settings_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/sliding_menu_title"
        android:textSize="@dimen/slidingmenu_title_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        oak:font="Roboto-Light.ttf"
        />
    <View
        style="@style/sideMenuSeparator"
        />
    <oak.widget.TextViewWithFont
        android:id="@+id/sli_menu_sync"
        android:text="@string/sliding_menu_sync"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/sliding_menu_text_color_selector"
        android:textSize="@dimen/slidingmenu_content_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        oak:font="Roboto-Light.ttf"
        />
    <oak.widget.TextViewWithFont
        android:id="@+id/sli_menu_settings"
        android:text="@string/sliding_menu_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/sliding_menu_text_color_selector"
        android:textSize="@dimen/slidingmenu_content_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        oak:font="Roboto-Light.ttf"
        />
    <oak.widget.TextViewWithFont
        android:id="@+id/sli_menu_contact"
        android:text="@string/sliding_menu_contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/sliding_menu_text_color_selector"
        android:textSize="@dimen/slidingmenu_content_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        oak:font="Roboto-Light.ttf"
        />
    <oak.widget.TextViewWithFont
        android:id="@id/about_fragment"
        android:text="@string/sliding_menu_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:textColor="@drawable/sliding_menu_text_color_selector"
        android:textSize="@dimen/slidingmenu_content_text_size"
        android:paddingTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingBottom="8dp"
        oak:font="Roboto-Light.ttf"
        />
</LinearLayout>